data/derived/sp14/progs/unify/prog3426.ml.out
Characters 72-76:
  | VarX -> Format.sprintf "%float" VarX;;
                                    ^^^^
Error: This expression has type expr but an expression was expected of type
         float
